--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/hnet.com-image.ico">
   <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <meta name="author" content="862064354">
 
-  <title>John Doe - Business Administration</title>
+  <title>Gabriel Lowell - History and Russian</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Gabriel Lowell</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/GabrielLowell.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,23 +58,22 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Gabriel Lowell
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">History and Russian Studies📚</div>
+        <p class="lead mb-4">Hello, I am Gabriel Lowell, a student at University of California, Riverside. I've been involved in several kinds of volunteer work. When I was younger, I worked as a volunteer for community outreaches through my church, I worked with homeless and low income familiy providing food, clothing and job opportunities to help them in their situation. For my trade, I have been working in my family's small business for 14 years, which is owned and developed by my father. I continue to work as a Dog Trainer, training dogs to hunt birds as well as training dogs with house obedience training.<br><br>
 
-        Enter bio here<br><br>
+        For my education, I started at Victor Valley College in 2015, which is a community college located in the town of Victorville, in the High Desert. At Victor Valley College, I got my Associate of Arts degree after which I transferred to University of California, Riverside in August of 2018. I am currently a double major with my majors being History and Russian Studies. <br><br>
 
-        Enter bio here
         </p>
         <div class="social-icons">
-          <a target="_blank" id="linkedin" href="https://linkedin.com">
+          <a target="_blank" id="linkedin" href="https://www.google.com/">
             <i class="fab fa-linkedin-in"></i>
           </a>
           <a target="_blank" id="github" href="https://github.com">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="twitter" href="https://twitter.com">
+          <a target="_blank" id="twitter" href="https://parler.com/auth/access">
             <i class="fab fa-twitter"></i>
           </a>
           <a target="_blank" id="email" href="mailto:youremail@gmail.com">
@@ -92,48 +91,45 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Dog Trainer for Hunting and House Obedience</h3>
+            <div class="subheading mb-3"><a target="_blank" href="http://www.pointingdogtrainer.com/">Small Business</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Trained dogs to do bird hunting<br> 
+              • House obedience training and dog boarding<br>
+              • Have worked with many types of dog breeds<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">June 2006 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Volunteer at Local Communities Centers and Churches</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.hillsidechurch.com/">Food and Opportunity Outreaches</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Worked with suppling food and essential goods to homeless and low income areas<br>
+              • Provided jobs and opportunities for said communities<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">January 2012 - December 2015</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Mission Outreach</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.hillsidechurch.com/">Part Time</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Worked in low income areas doing missionary work and community programs<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">May 2016 - October 2018</span>
           </div>
         </div>
 
@@ -151,34 +147,34 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">University of California, Riverside</h3>
+            <div class="subheading mb-3">Bachelor of Arts, History</div>
+            <div>Ancient and Medieval History, Russian History</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2018 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">University of California, Riverside</h3>
+            <div class="subheading mb-3">Bachelor of Arts, Russian Language and Literature</div>
+            <div>Russian language, history, culture and literature</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">August 2018 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <h3 class="mb-0">Victor Valley College</h3>
+            <div class="subheading mb-3">Associate of Arts</div>
+            <div>Liberal Arts with Humanities Focus</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2015 - December 2017</span>
           </div>
         </div>
 
@@ -191,7 +187,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+                <img src="img/church_outreach.png" width="500px">
+                <img src="img/outreach.png" width="500px"><br>
+                <img src="img/pointing_dog.png" width="500px">
+                <img src="img/pup.png" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +198,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Gabriel Lowell</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
